--- a/front/src/app/component/dashboard/dashboard.component.html
+++ b/front/src/app/component/dashboard/dashboard.component.html
@@ -1,1 +1,43 @@
-<p>dashboard works!</p>
+<div class="container-fluid bg-light">
+    <div class="container bg-light">
+ 
+ 
+        <div class="row mt-4" style="height: 500px;">
+            <div class="col"></div>
+            <div class="col-md-6 bg-white shadow">
+ 
+ 
+                <div class="card bg-warning mt-4">
+                    <h4 class="text-white p-3 pt-2 pb-2">Intervention App</h4>
+                </div>
+
+                <div class="shadow">
+                    <div class="input-group p-4">
+                        <input type="text" class="form-control" placeholder="Enter libelle " name="libelle" >
+                       
+                       
+                        <button class="btn btn-outline-success" type="button">+</button>
+                      </div>
+                </div>
+                
+                <h4 class="text-primary mt-4">Interventions : </h4>
+
+
+               <div style="overflow-y: auto; height: 350px;">
+                   <div class="m-3">
+                       <div class="p-2 shadow border">
+                           <div class="input-group row ps-3" >
+                               <div class="card col-md-10 border-0"> Testdata </div>
+                               <button class="btn btn-outline-primary col me-2" >e</button>
+                               <div class="btn btn-outline-danger col" >X</div>
+
+                           </div>
+                       </div>
+                   </div>
+               </div>
+
+
+            </div>
+        </div>
+    </div>
+</div> 
