--- a/front/src/app/component/dashboard/dashboard.component.html
+++ b/front/src/app/component/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
                            <div class="input-group row ps-3" >
                                <div class="card col-md-10 border-0"> {{intervention.libelle}} </div>
                                <button class="btn btn-outline-primary col me-2" >e</button>
-                               <div class="btn btn-outline-danger col" >X</div>
+                               <div class="btn btn-outline-danger col" (click)="deleteIntervention(intervention)">X</div>
 
                            </div>
                        </div>
