--- a/front/src/app/component/dashboard/dashboard.component.html
+++ b/front/src/app/component/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
                        <div class="p-2 shadow border">
                            <div class="input-group row ps-3" >
                                <div class="card col-md-10 border-0"> {{intervention.libelle}}  {{intervention.date_intervention}} </div>
-                               <button class="btn btn-outline-primary col me-2" data-bs-toggle="modal" type="button" data-bs-target="#exampleModal" (click)="call(intervention)" >e</button>
+                               <button class="btn btn-outline-primary col me-2" data-bs-toggle="modal" type="button" data-bs-target="#exampleModal" (click)="call(intervention)" [disabled]="isDateBeforeToday(intervention.date_intervention)">e</button>
                                <div class="btn btn-outline-danger col" (click)="deleteIntervention(intervention)">X</div>
 
                            </div>
