--- a/front/src/app/component/dashboard/dashboard.component.html
+++ b/front/src/app/component/dashboard/dashboard.component.html
@@ -47,7 +47,8 @@
                <div style="overflow-y: auto; height: 350px;">
                    <div class="m-3" *ngFor="let intervention of interventionArr">
                        <div class="p-2 shadow border">
-                           <div class="input-group row ps-3" >
+                        <span class="badge" [ngClass]="getBadgeInfo(intervention).class">{{ getBadgeInfo(intervention).text }}</span>
+                           <div class="input-group row ps-3 " >
                                <div class="card col-md-10 border-0"> {{intervention.libelle}}  {{intervention.date_intervention}} </div>
                                <button class="btn btn-outline-primary col me-2" data-bs-toggle="modal" type="button" data-bs-target="#exampleModal" (click)="call(intervention)" [disabled]="isDateBeforeToday(intervention.date_intervention)">e</button>
                                <div class="btn btn-outline-danger col" (click)="deleteIntervention(intervention)">X</div>
