error code + flake8

--- a/front/src/app/component/dashboard/dashboard.component.html
+++ b/front/src/app/component/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
                     <div class="modal-body">
                         <div class="input-group p-4">
                             <p><label>Libellé</label>
-                                <input type="text" class="form-control" placeholder="Enter libelle " name="libelle" [(ngModel)]="interventionObjedit.libelle"></p>
+                                <input type="text" class="form-control" placeholder="Enter libelle " name="libelle" [(ngModel)]="interventionObjedit.libelle" required></p>
                             <p><label>Description</label>
                             <input type="text" class="form-control" placeholder="Enter description " name="description" [(ngModel)]="interventionObjedit.description">
                         </p><p><label>Nom intervenant</label>
